--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   box-shadow: inset 0 1.2em #fff, inset 0 1.8em rgb(255, 218, 97);
 }
 
-.text-muted {
-  color: rgb(97, 125, 148);
-  font-weight: bold;
-}
-
 .info-links {
   position: relative;
   top: 15px;
@@ -75,6 +70,31 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   font-size: 16px;
   text-decoration: none;
   padding: 7px;
+  border: 1px solid black;
+  transition: .3s linear all;
+}
+
+.info-links {
+  background: none;
+  color: #000;
+  box-shadow: 0 0 1px #ccc;
+  -webkit-transition-duration: 0.3s;
+  -webkit-transition-timing-function: linear;
+  transition-duration: 0.3s;
+  transition-timing-function: linear;
+  box-shadow: 0px 0 0 #ffc107 inset;
+}
+
+.info-links:hover {
+  background: none;
+  box-shadow: 200px 0 0 #ffc107 inset;
+  border-color: black;
+  border-radius: 0px;
+}
+
+.text-muted {
+  color: rgb(97, 125, 148);
+  font-weight: bold;
 }
 
 .mx-auto {
