--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,25 @@ summary {
   box-shadow: inset 0 1.2em #fff, inset 0 1.8em rgb(255, 218, 97);
 }
 
+.ul-list {
+  padding-left: 10%;
+  /* list-style-type: circle; */
+}
+.ul-list li:before {
+  position: relative;
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: rgb(223, 0, 0);
+  margin-right: 5px;
+  margin-bottom: 4px;
+}
+
+.ul-list li a {
+  color: #b82b14;
+}
 .html-color {
   background-color: #f16529;
   color: white;
@@ -380,6 +399,10 @@ summary {
   background-color: rgb(223, 0, 0);
 }
 
+.myProjects.heading:after {
+  background-color: #000;
+}
+
 .hobby__text .hobby {
   margin-top: 40px;
   margin-left: 15px;
@@ -444,12 +467,21 @@ summary {
 }
 
 .text__divs p {
-  text-align: justify;
-  letter-spacing: 1px;
   padding: 15px;
   font-size: 15px;
   white-space: wrap;
 }
+.pregress-handler{
+  width: 100%;  
+}
+.pregress-handler .progress, .progress-bar {
+  height: 25px;
+}
+
+.progress {
+  box-shadow: 0 0 2px gray;
+}
+
 
 .text__divs h3 {
   font-weight: bold;
@@ -458,15 +490,53 @@ summary {
   padding-left: 15px;
 }
 
-.job__text .text__divs span {
-  background: linear-gradient(-45deg, red, darkred);
-  padding: 7px;
-  border-radius: 50%;
-  color: white;
+.progress {
+  display: -ms-flexbox;
+  display: flex;
+  height: 1rem;
+  overflow: hidden;
+  font-size: 0.75rem;
+  background-color: #e9ecef;
+  border-radius: 0.25rem;
+  max-width: 100%;  
+  margin-top: 10px;
 }
 
-.job__text .text__divs .first {
-  padding: 7px 9px;
+.progress-bar {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: center;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #007bff;
+  transition: width 0.6s ease;    
+}
+
+.legend {
+  position: relative;
+  width: 60px;
+  text-align: center;
+  top: 39px;
+  box-shadow: 0px 0px 0px 1px white,  0px 3px 0px 3px black ;
+  height: 35px;
+  padding-top: 7px;
+  padding-right: 10px;
+  padding-left: 10px;
+  color: white;
+  font-weight: bold;
+  border-radius: 30px;
+}
+.percent {
+  color: white;
+  font-weight: bold;
+  position: relative;
+  right: 30px;
+  top: 3px;
 }
 
 .myProjects__text {
