--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
   font-family: 'Montserrat', sans-serif !important;
+  box-sizing: border-box;
 }
 
 /* Сброс стилей для всех браузеров */
@@ -152,6 +153,10 @@ summary {
   box-shadow: inset 0 1.2em #fff, inset 0 1.8em rgb(255, 218, 97);
 }
 
+.mw1280px {
+  max-width: 1380px;
+}
+
 .ul-list {
   padding-left: 10%;
   /* list-style-type: circle; */
@@ -166,6 +171,12 @@ summary {
   background-color: rgb(223, 0, 0);
   margin-right: 5px;
   margin-bottom: 4px;
+}
+.mt-3 {
+  margin-top: 1.25rem;
+}
+.mb-3 {
+  margin-bottom: 1.25rem;
 }
 
 .ul-list li a {
@@ -670,6 +681,64 @@ summary {
   box-shadow: 2px 2px 10px black;
 }
 
+.slider-1 {
+  position: relative;
+}
+
+#falseNavigationLeft{
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border:1px solid lightgray;
+  box-shadow: 0px 3px 3px gray;
+  background-color: #fff;
+  top: 50%;
+  left: 5px;
+  transform: translate(0%, -50%);
+  font-size: 30px;
+  cursor: pointer;
+  z-index: 999;
+}
+
+#falseNavigationRight {
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border:1px solid lightgray;
+  box-shadow: 0px 3px 3px gray;
+  background-color: #fff;
+  top: 50%;
+  right: 5px;
+  transform: translate(0%, -50%);
+  font-size: 30px;
+  cursor: pointer;
+  z-index: 999;
+}
+
+#falseNavigationLeft, #falseNavigationRight {
+  transition: .3s linear;
+  color: black;
+}
+#falseNavigationLeft:hover, #falseNavigationLeft:focus, #falseNavigationLeft:active, #falseNavigationRight:hover, #falseNavigationRight:focus, #falseNavigationRight:active {
+  box-shadow: none;
+  outline: none;
+}
+#falseNavigationLeft:hover, #falseNavigationRight:hover {
+  opacity: .6;
+}
+
+.myCertificates {
+  padding-top: 50px;
+}
+
+.myCertificates-heading {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 50px;
+}
 /* Prloader animation */
 .loading-animation {
   padding-left: 15px;
