--- a/css/style.css
+++ b/css/style.css
@@ -730,7 +730,23 @@ summary {
 }
 
 .myCertificates {
-  padding-top: 50px;
+  position: relative;
+  padding-top:70px;
+  padding-bottom: 70px;
+  background-color: rgba(0,0,0,.5);
+}
+
+.myCertificates:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../images/section1.jpg") no-repeat fixed;
+  background-size: cover;
+  background-position: center center;  
+  z-index: -1;
 }
 
 .myCertificates-heading {
@@ -738,6 +754,7 @@ summary {
   font-weight: bold;
   text-align: center;
   margin-bottom: 50px;
+  color: white;
 }
 /* Prloader animation */
 .loading-animation {
