--- a/css/style.css
+++ b/css/style.css
@@ -764,6 +764,47 @@ summary {
   font-weight: bold;
   margin-top: 50px;
 }
+
+.make-an-order {
+  position: relative;
+  bottom: 0;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  max-width: 200px;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 15px;
+  cursor: pointer;
+  background-color: #3e82f7;
+  border: 2px solid white;
+  border-radius: 4px;
+  box-shadow: 0 0 5px gray;
+  color: #e9ecef;
+  transition: .3s linear;
+}
+.make-an-order:focus, .make-an-order:hover, .make-an-order:active {
+  outline: none;
+}
+.make-an-order:hover {
+  bottom:5px;
+  box-shadow: 0 0 10px gray;
+}
+
+footer {
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+footer hr {
+  background: lightgray;
+  height: 2px; 
+  border:none;
+  max-width: 768px;
+}
+
+footer div {
+  margin-top: 30px;
+}
 /* Prloader animation */
 .loading-animation {
   padding-left: 15px;
@@ -844,7 +885,10 @@ summary {
     border-radius: 4px;
     overflow: hidden;
   }
-
+  .make-an-order {
+    padding: 8px;
+    font-size: 16px;
+  }
 }
 
 @media screen and (max-width:576px) {
