--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,11 @@ summary {
   color: white;
 }
 
+.ajax-color {
+  background-color: #0683cb;
+  color: white;
+}
+
 .info-links {
   position: relative;
   top: 15px;
@@ -570,7 +575,6 @@ summary {
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-
   position: relative;
   left: 20px;
   height: 25vh;
@@ -602,6 +606,10 @@ summary {
   background-image: url('../images/5.png');
 }
 
+.text__divs:nth-of-type(6) .myProjects-body {
+  background-image: url('../images/6.png');
+}
+
 .text__divs:nth-of-type(1) .myProjects-text .myProjects-body h3 {
   background-color: #ff6777;
   color: white;
@@ -620,6 +628,11 @@ summary {
 }
 .text__divs:nth-of-type(5) .myProjects-text .myProjects-body h3 {
   background-color: #292b2c;
+  color: white;
+}
+
+.text__divs:nth-of-type(6) .myProjects-text .myProjects-body h3 {
+  background-color: #007bff;
   color: white;
 }
 
