--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,16 @@ small {
   font-size: 13px;
   font-weight: normal;
 }
+.template {
+  position: relative;
+  font-size: 13px;
+  bottom: 1px;
+  background-color: red;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 30px;
+}
+
 .box-shadow-underlined {
   box-shadow: inset 0 1.2em #fff, inset 0 1.8em rgb(255, 218, 97);
 }
