--- a/css/style.css
+++ b/css/style.css
@@ -4,87 +4,11 @@
 }
 
 /* Сброс стилей для всех браузеров */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,
+abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,
+var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,
+th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,
+section,summary,time,mark,audio,video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -97,8 +21,7 @@ html {
   line-height: 1;
 }
 
-ol,
-ul {
+ol, ul {
   list-style: none;
 }
 
@@ -107,23 +30,17 @@ table {
   border-spacing: 0;
 }
 
-caption,
-th,
-td {
+caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-q,
-blockquote {
+q, blockquote {
   quotes: none;
 }
 
-q:before,
-q:after,
-blockquote:before,
-blockquote:after {
+q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
@@ -132,19 +49,8 @@ a img {
   border: none;
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
+article, aside, details, figcaption, figure, footer, header,
+hgroup,main,menu,nav,section,summary {
   display: block;
 }
 
@@ -162,7 +68,9 @@ small {
   padding-right: 5px;
   border-radius: 30px;
 }
-
+.mr-auto {
+  margin-right: auto;
+}
 .box-shadow-underlined {
   box-shadow: inset 0 1.2em #fff, inset 0 1.8em rgb(255, 218, 97);
 }
@@ -833,6 +741,117 @@ footer hr {
 
 footer div {
   margin-top: 30px;
+}
+.warnings {
+  position: fixed;    
+  right: -350px;
+  top:0;
+  height: 100%;
+  max-width: 350px;
+  width: 100%;
+  background:url('../images/chat-bg.jpg') no-repeat;
+  background-size: cover;
+  box-shadow: 2px 0 10px black;
+  z-index: 999;
+  overflow: hidden;
+  transition: .3s linear;
+}
+.warnings .info-panel {
+  position: relative;
+  display: flex;
+  align-items: center;
+  max-width: 350px;
+  padding: 15px;
+  width: 100%;
+  background-color: #fff;  
+  box-shadow: 0 3px 5px black;
+  z-index: 998;
+}
+.warnings .chat {
+  display: flex;
+  align-items: center;
+  flex-direction: column-reverse;
+  align-items: flex-end;
+  height: 90vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.warnings .info-panel button {
+  border-radius: 30px;
+  border: none;
+  font-size: 20px;
+  padding: 4.5px 11px;
+  cursor: pointer;
+}
+.warnings .info-panel h3 {
+  font-weight: bold;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.warnings .info-panel button:hover, .warnings .info-panel button:focus, .warnings .info-panel button:active {
+  outline: none;
+}
+.toast {  
+  position: relative;  
+  max-width: 350px;
+  width: 100%;
+  overflow: hidden;
+  font-size: 0.875rem;
+  background-color: white;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  opacity: 1;
+  border-radius: 0.25rem;
+  z-index: 9999;
+  margin-bottom: 0.75rem;
+  transition: .3s linear all;  
+  animation: toastHello .3s linear 1 both;
+}
+
+.toast-header {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 0.5rem 0.75rem;
+  color: #6c757d;
+  background-color: rgb(233, 0, 0);
+  color:white;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.toast-body {
+  padding: 0.55rem 0.75rem;
+  line-height: 1.5;
+}
+
+.toast-body code {
+  background-color: black;
+  padding: 3px;
+  border-radius: 4px;
+  color:white;
+}
+
+@keyframes toastHello {
+  0% {
+    opacity: 0;
+    
+  }
+  100% {
+    
+    opacity: 1;
+  }
+}
+@keyframes toastGoodBye {
+  0% {
+    left: 0;
+    opacity: 1;
+  }
+  100% {
+    left: 100%;
+    opacity: 0;
+  }
 }
 /* Prloader animation */
 .loading-animation {
